# AssistTech

./: CMakeLists.txt  README.md  main.cpp
AsistTech_VS/: AsistTech_VS.sln
AsistTech_VS/AsistTech_VS/: AsistTech_VS.cpp  AsistTech_VS.vcxproj  AsistTech_VS.vcxproj.filters  ReadMe.txt  stdafx.cpp
AssistTech_Py/: AssistTech_Py.sln
AssistTech_Py/AssistTech_Py/: AssistTech_Py.py  AssistTech_Py.pyproj  ScreenScanner.py  furAssistTech_Py.py  movementDetect_Py.py  murAssistTech_Py.py
